--- a/css/fff.css
+++ b/css/fff.css
@@ -15,9 +15,14 @@ img {
 	width: 100vh;
 	height: 105vh;
 	cursor: pointer;
+	-webkit-transform: translate(-25%, 0);
+	-ms-transform: translate(-25%, 0);
+	-o-transform: translate(-25%, 0);
+	transform: translate(-25%, 0);
 }
 
 h3 {
+	font-size: 150%;
 	position: absolute;
 	left: 50%;
 	-webkit-transform: translate(-50%, 0);
@@ -26,6 +31,22 @@ h3 {
 	transform: translate(-50%, 0);
 	top: 15%;
 	color: white;
+	pointer-events: none;
+
+}
+
+
+h4 {
+	font-size: 100%;
+	position: absolute;
+	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
+	-o-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
+	bottom: 25%;
+	color: white;
+	opacity: 0.7;
 	pointer-events: none;
 
 }
